@@ -1,3 +1,10 @@
+2006-10-17  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/26020
+	* include/bits/stl_iterator_base_funcs.h (advance): Convert
+	distance parameter to iterator_traits<>::difference_type.
+	* testsuite/24_iterators/26020.cc: New.
+
 2006-10-17  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/tr1/random.tcc: Fixup long line.
